charts/langflow/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: langflow
  namespace: langflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: langflow
  template:
    metadata:
      labels:
        app: langflow
    spec:
      containers:
        - name: container
          image: 'docker.io/cengleby86/langflow:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
