charts/langflow/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: langflow
  namespace: langflow
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: langflow
