charts/langflow/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: langflow
  namespace: langflow
spec:
  to:
    kind: Service
    name: langflow
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
